# OGL-c--template

./: CMakeLists.txt  README.md  script.sh
libs/glad/: glad.c  glad.h
src/: main.cpp
